[package]
name = "finpy-option"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = {version="0.4.23", features = ["serde"]}
deribit = "0.3.2"
futures-util = "0.3.26"
# optiors = {git = "https://github.com/eightfx/option_test"}
optiors = {path = "../option"}
reqwest = "0.11.14"
serde_json = "1.0.93"
tokio = {version="1.25.0", features=["full"]}
tungstenite = "0.18.0"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
url = "2.3.1"
websocket = "0.26.5"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
plotters = "0.3.4"
rust_decimal = "1.28.1"
